--- a/css/fontfaces.scss
+++ b/css/fontfaces.scss
@@ -1,73 +1,92 @@
 @font-face {
     font-family: 'Calibre';
-    src: url('../fonts/Calibre-Regular.eot')
+    src: url('../fonts/Calibre-Thin.eot');
+    src: local('Calibre Thin'), local('Calibre-Thin'),
+        url('../fonts/Calibre-Thin.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Calibre-Thin.woff2') format('woff2'),
+        url('../fonts/Calibre-Thin.woff') format('woff'),
+        url('../fonts/Calibre-Thin.ttf') format('truetype'),
+        url('../fonts/Calibre-Thin.svg#Calibre-Thin') format('svg');
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Calibre';
+    src: url('../fonts/Calibre-Light.eot');
+    src: local('Calibre Light'), local('Calibre-Light'),
+        url('../fonts/Calibre-Light.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Calibre-Light.woff2') format('woff2'),
+        url('../fonts/Calibre-Light.woff') format('woff'),
+        url('../fonts/Calibre-Light.ttf') format('truetype'),
+        url('../fonts/Calibre-Light.svg#Calibre-Light') format('svg');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Calibre';
+    src: url('../fonts/Calibre-Regular.eot');
+    src: local('Calibre'), local('Calibre-Regular'),
         url('../fonts/Calibre-Regular.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Calibre-Regular.woff2') format('woff2'),
         url('../fonts/Calibre-Regular.woff') format('woff'),
         url('../fonts/Calibre-Regular.ttf') format('truetype'),
         url('../fonts/Calibre-Regular.svg#Calibre-Regular') format('svg');
-    font-weight: 400;
+    font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Calibre';
-    src: url('../fonts/Calibre-RegularItalic.eot')
-        url('../fonts/Calibre-RegularItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Calibre-RegularItalic.woff2') format('woff2'),
-        url('../fonts/Calibre-RegularItalic.woff') format('woff'),
-        url('../fonts/Calibre-RegularItalic.ttf') format('truetype'),
-        url('../fonts/Calibre-RegularItalic.svg#Calibre-RegularItalic') format('svg');
-    font-weight: 400;
-    font-style: italic;
+    src: url('../fonts/Calibre-Medium.eot');
+    src: local('Calibre Medium'), local('Calibre-Medium'),
+        url('../fonts/Calibre-Medium.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Calibre-Medium.woff2') format('woff2'),
+        url('../fonts/Calibre-Medium.woff') format('woff'),
+        url('../fonts/Calibre-Medium.ttf') format('truetype'),
+        url('../fonts/Calibre-Medium.svg#Calibre-Medium') format('svg');
+    font-weight: 500;
+    font-style: normal;
 }
 
 @font-face {
     font-family: 'Calibre';
-    src: url('../fonts/Calibre-Semibold.eot')
+    src: url('../fonts/Calibre-Semibold.eot');
+    src: local('Calibre Semibold'), local('Calibre-Semibold'),
         url('../fonts/Calibre-Semibold.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Calibre-Semibold.woff2') format('woff2'),
         url('../fonts/Calibre-Semibold.woff') format('woff'),
         url('../fonts/Calibre-Semibold.ttf') format('truetype'),
         url('../fonts/Calibre-Semibold.svg#Calibre-Semibold') format('svg');
-    font-weight: 500;
+    font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Calibre';
-    src: url('../fonts/Calibre-SemiboldItalic.eot')
-        url('../fonts/Calibre-SemiboldItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Calibre-SemiboldItalic.woff2') format('woff2'),
-        url('../fonts/Calibre-SemiboldItalic.woff') format('woff'),
-        url('../fonts/Calibre-SemiboldItalic.ttf') format('truetype'),
-        url('../fonts/Calibre-SemiboldItalic.svg#Calibre-SemiboldItalic') format('svg');
-    font-weight: 500;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Calibre';
-    src: url('../fonts/Calibre-Bold.eot')
+    src: url('../fonts/Calibre-Bold.eot');
+    src: local('Calibre Bold'), local('Calibre-Bold'),
         url('../fonts/Calibre-Bold.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Calibre-Bold.woff2') format('woff2'),
         url('../fonts/Calibre-Bold.woff') format('woff'),
         url('../fonts/Calibre-Bold.ttf') format('truetype'),
         url('../fonts/Calibre-Bold.svg#Calibre-Bold') format('svg');
-    font-weight: 600;
+    font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Calibre';
-    src: url('../fonts/Calibre-BoldItalic.eot')
-        url('../fonts/Calibre-BoldItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Calibre-BoldItalic.woff2') format('woff2'),
-        url('../fonts/Calibre-BoldItalic.woff') format('woff'),
-        url('../fonts/Calibre-BoldItalic.ttf') format('truetype'),
-        url('../fonts/Calibre-BoldItalic.svg#Calibre-BoldItalic') format('svg');
-    font-weight: 600;
-    font-style: italic;
+    src: url('../fonts/Calibre-Black.eot');
+    src: local('Calibre Black'), local('Calibre-Black'),
+        url('../fonts/Calibre-Black.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Calibre-Black.woff2') format('woff2'),
+        url('../fonts/Calibre-Black.woff') format('woff'),
+        url('../fonts/Calibre-Black.ttf') format('truetype'),
+        url('../fonts/Calibre-Black.svg#Calibre-Black') format('svg');
+    font-weight: 900;
+    font-style: normal;
 }
 
 
