--- a/css/styles.css
+++ b/css/styles.css
@@ -7798,49 +7798,50 @@ a.text-dark:hover, a.text-dark:focus {
     border: 1px solid #ddd !important; } }
 @font-face {
   font-family: 'Calibre';
-  src: url("../fonts/Calibre-Regular.eot") url("../fonts/Calibre-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Calibre-Regular.woff2") format("woff2"), url("../fonts/Calibre-Regular.woff") format("woff"), url("../fonts/Calibre-Regular.ttf") format("truetype"), url("../fonts/Calibre-Regular.svg#Calibre-Regular") format("svg");
-  font-weight: 400;
+  src: url("../fonts/Calibre-Thin.eot");
+  src: local("Calibre Thin"), local("Calibre-Thin"), url("../fonts/Calibre-Thin.eot?#iefix") format("embedded-opentype"), url("../fonts/Calibre-Thin.woff2") format("woff2"), url("../fonts/Calibre-Thin.woff") format("woff"), url("../fonts/Calibre-Thin.ttf") format("truetype"), url("../fonts/Calibre-Thin.svg#Calibre-Thin") format("svg");
+  font-weight: 100;
   font-style: normal; }
 @font-face {
   font-family: 'Calibre';
-  src: url("../fonts/Calibre-RegularItalic.eot") url("../fonts/Calibre-RegularItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/Calibre-RegularItalic.woff2") format("woff2"), url("../fonts/Calibre-RegularItalic.woff") format("woff"), url("../fonts/Calibre-RegularItalic.ttf") format("truetype"), url("../fonts/Calibre-RegularItalic.svg#Calibre-RegularItalic") format("svg");
-  font-weight: 400;
-  font-style: normal; }
-@font-face {
-  font-family: 'Calibre';
-  src: url("../fonts/Calibre-Semibold.eot") url("../fonts/Calibre-Semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/Calibre-Semibold.woff2") format("woff2"), url("../fonts/Calibre-Semibold.woff") format("woff"), url("../fonts/Calibre-Semibold.ttf") format("truetype"), url("../fonts/Calibre-Semibold.svg#Calibre-Semibold") format("svg");
-  font-weight: 400;
-  font-style: normal; }
-@font-face {
-  font-family: 'Calibre';
-  src: url("../fonts/Calibre-SemiboldItalic.eot") url("../fonts/Calibre-SemiboldItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/Calibre-SemiboldItalic.woff2") format("woff2"), url("../fonts/Calibre-SemiboldItalic.woff") format("woff"), url("../fonts/Calibre-SemiboldItalic.ttf") format("truetype"), url("../fonts/Calibre-SemiboldItalic.svg#Calibre-SemiboldItalic") format("svg");
-  font-weight: 400;
-  font-style: normal; }
-@font-face {
-  font-family: 'Calibre';
-  src: url("../fonts/Calibre-Bold.eot") url("../fonts/Calibre-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Calibre-Bold.woff2") format("woff2"), url("../fonts/Calibre-Bold.woff") format("woff"), url("../fonts/Calibre-Bold.ttf") format("truetype"), url("../fonts/Calibre-Bold.svg#Calibre-Bold") format("svg");
-  font-weight: 400;
-  font-style: normal; }
-@font-face {
-  font-family: 'Calibre';
-  src: url("../fonts/Calibre-BoldItalic.eot") url("../fonts/Calibre-BoldItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/Calibre-BoldItalic.woff2") format("woff2"), url("../fonts/Calibre-BoldItalic.woff") format("woff"), url("../fonts/Calibre-BoldItalic.ttf") format("truetype"), url("../fonts/Calibre-BoldItalic.svg#Calibre-BoldItalic") format("svg");
-  font-weight: 400;
-  font-style: normal; }
-@font-face {
-  font-family: 'Tiempos Headline';
-  src: url("../fonts/TiemposHeadline-Light.eot"), url("../fonts/TiemposHeadline-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/TiemposHeadline-Light.woff2") format("woff2"), url("../fonts/TiemposHeadline-Light.woff") format("woff"), url("../fonts/TiemposHeadline-Light.ttf") format("truetype"), url("../fonts/TiemposHeadline-Light.svg#TiemposHeadline-Light") format("svg");
+  src: url("../fonts/Calibre-Light.eot");
+  src: local("Calibre Light"), local("Calibre-Light"), url("../fonts/Calibre-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/Calibre-Light.woff2") format("woff2"), url("../fonts/Calibre-Light.woff") format("woff"), url("../fonts/Calibre-Light.ttf") format("truetype"), url("../fonts/Calibre-Light.svg#Calibre-Light") format("svg");
   font-weight: 300;
+  font-style: normal; }
+@font-face {
+  font-family: 'Calibre';
+  src: url("../fonts/Calibre-Regular.eot");
+  src: local("Calibre"), local("Calibre-Regular"), url("../fonts/Calibre-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Calibre-Regular.woff2") format("woff2"), url("../fonts/Calibre-Regular.woff") format("woff"), url("../fonts/Calibre-Regular.ttf") format("truetype"), url("../fonts/Calibre-Regular.svg#Calibre-Regular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: 'Calibre';
+  src: url("../fonts/Calibre-Medium.eot");
+  src: local("Calibre Medium"), local("Calibre-Medium"), url("../fonts/Calibre-Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/Calibre-Medium.woff2") format("woff2"), url("../fonts/Calibre-Medium.woff") format("woff"), url("../fonts/Calibre-Medium.ttf") format("truetype"), url("../fonts/Calibre-Medium.svg#Calibre-Medium") format("svg");
+  font-weight: 500;
+  font-style: normal; }
+@font-face {
+  font-family: 'Calibre';
+  src: url("../fonts/Calibre-Semibold.eot");
+  src: local("Calibre Semibold"), local("Calibre-Semibold"), url("../fonts/Calibre-Semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/Calibre-Semibold.woff2") format("woff2"), url("../fonts/Calibre-Semibold.woff") format("woff"), url("../fonts/Calibre-Semibold.ttf") format("truetype"), url("../fonts/Calibre-Semibold.svg#Calibre-Semibold") format("svg");
+  font-weight: 600;
+  font-style: normal; }
+@font-face {
+  font-family: 'Calibre';
+  src: url("../fonts/Calibre-Bold.eot");
+  src: local("Calibre Bold"), local("Calibre-Bold"), url("../fonts/Calibre-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Calibre-Bold.woff2") format("woff2"), url("../fonts/Calibre-Bold.woff") format("woff"), url("../fonts/Calibre-Bold.ttf") format("truetype"), url("../fonts/Calibre-Bold.svg#Calibre-Bold") format("svg");
+  font-weight: bold;
+  font-style: normal; }
+@font-face {
+  font-family: 'Calibre';
+  src: url("../fonts/Calibre-Black.eot");
+  src: local("Calibre Black"), local("Calibre-Black"), url("../fonts/Calibre-Black.eot?#iefix") format("embedded-opentype"), url("../fonts/Calibre-Black.woff2") format("woff2"), url("../fonts/Calibre-Black.woff") format("woff"), url("../fonts/Calibre-Black.ttf") format("truetype"), url("../fonts/Calibre-Black.svg#Calibre-Black") format("svg");
+  font-weight: 900;
   font-style: normal; }
 @font-face {
   font-family: 'Tiempos Headline';
   src: url("../fonts/TiemposHeadline-Regular.eot"), url("../fonts/TiemposHeadline-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/TiemposHeadline-Regular.woff2") format("woff2"), url("../fonts/TiemposHeadline-Regular.woff") format("woff"), url("../fonts/TiemposHeadline-Regular.ttf") format("truetype"), url("../fonts/TiemposHeadline-Regular.svg#TiemposHeadline-Regular") format("svg");
   font-weight: 400;
-  font-style: normal; }
-@font-face {
-  font-family: 'Tiempos Headline';
-  src: url("../fonts/TiemposHeadline-Medium.eot");
-  src: local("Tiempos Headline Medium"), local("TiemposHeadline-Medium"), url("../fonts/TiemposHeadline-Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/TiemposHeadline-Medium.woff2") format("woff2"), url("../fonts/TiemposHeadline-Medium.woff") format("woff"), url("../fonts/TiemposHeadline-Medium.ttf") format("truetype"), url("../fonts/TiemposHeadline-Medium.svg#TiemposHeadline-Medium") format("svg");
-  font-weight: 500;
   font-style: normal; }
 @font-face {
   font-family: 'Tiempos Headline';
@@ -7855,26 +7856,9 @@ a.text-dark:hover, a.text-dark:focus {
   font-style: normal; }
 @font-face {
   font-family: 'Tiempos Headline';
-  src: url("../fonts/TiemposHeadline-Black.eot"), url("../fonts/TiemposHeadline-Black.eot?#iefix") format("embedded-opentype"), url("../fonts/TiemposHeadline-Black.woff2") format("woff2"), url("../fonts/TiemposHeadline-Black.woff") format("woff"), url("../fonts/TiemposHeadline-Black.ttf") format("truetype"), url("../fonts/TiemposHeadline-Black.svg#TiemposHeadline-Black") format("svg");
-  font-weight: 900;
-  font-style: normal; }
-@font-face {
-  font-family: 'Tiempos Headline';
-  src: url("../fonts/TiemposHeadline-LightItalic.eot");
-  src: local("Tiempos Headline Light Italic"), local("TiemposHeadline-LightItalic"), url("../fonts/TiemposHeadline-LightItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/TiemposHeadline-LightItalic.woff2") format("woff2"), url("../fonts/TiemposHeadline-LightItalic.woff") format("woff"), url("../fonts/TiemposHeadline-LightItalic.ttf") format("truetype"), url("../fonts/TiemposHeadline-LightItalic.svg#TiemposHeadline-LightItalic") format("svg");
-  font-weight: 300;
-  font-style: italic; }
-@font-face {
-  font-family: 'Tiempos Headline';
   src: url("../fonts/TiemposHeadline-RegularItalic.eot");
   src: local("Tiempos Headline Regular Italic"), local("TiemposHeadline-RegularItalic"), url("../fonts/TiemposHeadline-RegularItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/TiemposHeadline-RegularItalic.woff2") format("woff2"), url("../fonts/TiemposHeadline-RegularItalic.woff") format("woff"), url("../fonts/TiemposHeadline-RegularItalic.ttf") format("truetype"), url("../fonts/TiemposHeadline-RegularItalic.svg#TiemposHeadline-RegularItalic") format("svg");
   font-weight: 400;
-  font-style: italic; }
-@font-face {
-  font-family: 'Tiempos Headline';
-  src: url("../fonts/TiemposHeadline-MediumItalic.eot");
-  src: local("Tiempos Headline Medium Italic"), local("TiemposHeadline-MediumItalic"), url("../fonts/TiemposHeadline-MediumItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/TiemposHeadline-MediumItalic.woff2") format("woff2"), url("../fonts/TiemposHeadline-MediumItalic.woff") format("woff"), url("../fonts/TiemposHeadline-MediumItalic.ttf") format("truetype"), url("../fonts/TiemposHeadline-MediumItalic.svg#TiemposHeadline-MediumItalic") format("svg");
-  font-weight: 500;
   font-style: italic; }
 @font-face {
   font-family: 'Tiempos Headline';
@@ -7887,12 +7871,6 @@ a.text-dark:hover, a.text-dark:focus {
   src: url("../fonts/TiemposHeadline-BoldItalic.eot");
   src: local("Tiempos Headline Bold Italic"), local("TiemposHeadline-BoldItalic"), url("../fonts/TiemposHeadline-BoldItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/TiemposHeadline-BoldItalic.woff2") format("woff2"), url("../fonts/TiemposHeadline-BoldItalic.woff") format("woff"), url("../fonts/TiemposHeadline-BoldItalic.ttf") format("truetype"), url("../fonts/TiemposHeadline-BoldItalic.svg#TiemposHeadline-BoldItalic") format("svg");
   font-weight: 700;
-  font-style: italic; }
-@font-face {
-  font-family: 'Tiempos Headline';
-  src: url("../fonts/TiemposHeadline-BlackItalic.eot");
-  src: local("Tiempos Headline Black Italic"), local("TiemposHeadline-BlackItalic"), url("../fonts/TiemposHeadline-BlackItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/TiemposHeadline-BlackItalic.woff2") format("woff2"), url("../fonts/TiemposHeadline-BlackItalic.woff") format("woff"), url("../fonts/TiemposHeadline-BlackItalic.ttf") format("truetype"), url("../fonts/TiemposHeadline-BlackItalic.svg#TiemposHeadline-BlackItalic") format("svg");
-  font-weight: 900;
   font-style: italic; }
 /* ---------- Stylin' --------- */
 html,
@@ -8049,8 +8027,8 @@ dt {
   padding: 16px 24px 10px; }
 
 .media {
-  font-size: 18px;
-  line-height: 24px; }
+  font-size: 1rem;
+  line-height: 1.5; }
 
 .media img {
   max-width: 112px; }
