--- a/css/styles.scss
+++ b/css/styles.scss
@@ -248,8 +248,8 @@ dt {
 }
 
 .media {
-    font-size: 18px;
-    line-height: 24px;
+    font-size: 1rem;
+    line-height: 1.5;
 }
 
 .media img {
